verwarmingselement is toegevoegd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(wasmachine)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(wasmachine main.cpp wasprogramma.cpp waterNiveauRegelaar.h waterNiveauRegelaar.cpp waterNiveauSensor.h waterNiveauSensor.cpp trommel.cpp)
+add_executable(wasmachine main.cpp wasprogramma.cpp waterNiveauRegelaar.h waterNiveauRegelaar.cpp waterNiveauSensor.h waterNiveauSensor.cpp trommel.cpp verwarmingselement.h verwarmingselement.cpp)
